--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     ".next/types/**/*.ts",
     "types/**/*.d.ts",
     ".next\\dev/types/**/*.ts",
-    ".next\\dev/types/**/*.ts"
+    ".next\\dev/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
